# tdsjjg

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: mirror.yml
include/: Common.hpp  Core.hpp  Errors.hpp
include/Graphics/: IGraphics.hpp  SfmlGraphics.hpp
include/Graphics/Assets/: AAsset.hpp  Font.hpp  IAsset.hpp  Sprite.hpp  Text.hpp
include/Graphics/Assets/Shapes/: AShape.hpp  CircleShape.hpp  IShape.hpp  RectangleShape.hpp
include/Jetpack/: Player.hpp
include/Scenes/: AScene.hpp  IScene.hpp  Jetpack.hpp  MenuSelector.hpp
src/: Core.cpp  Jetpack.cpp  MenuSelector.cpp  SfmlGraphics.cpp  main.cpp
