cmake_minimum_required(VERSION 3.16)

project(Tdsjjg LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_compile_options(-Wall -Wextra -Werror -g)

include_directories(include)

file(GLOB_RECURSE SOURCES "src/*.cpp")

add_executable(tdsjjg ${SOURCES})
target_link_libraries(tdsjjg sfml-graphics sfml-window sfml-system)
